Hold on to MediaQueryList objects that have listeners so that notification doesn't depend on GC timing.  (Bug 716751)  r=bzbarsky

Note:  This also fixes a crash (when notifications happen) from
calling mql.addListeners(null).

This also fixes test_media_query_list.html so that the initial set of
tests doesn't keep running through the later tests.

The test for the null-dereference has been confirmed to crash without
the patch and pass with the patch.

The test for the gc issue has been confirmed to fail without the patch
and pass with the patch.